--- a/Login-Cadastro/cadastro.html
+++ b/Login-Cadastro/cadastro.html
@@ -8,6 +8,7 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+     
  <div class="novo_body">
      <nav class="nav" >
           <svg class="logo_spotify" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-spotify" viewBox="0 0 16 16">
@@ -48,16 +49,17 @@
                </button>
           </div>
           <form class="form">
-               <label class="Label" for="">Digite seu nome de usuario</label>
-               <input class="corpo_input" type="text" placeholder="Digite seu nome de usuario"> <br>
+               <label  class="Label" for="">Digite seu nome de usuario</label>
+               <input id="nomeU" class="corpo_input" type="text" placeholder="Digite seu nome de usuario"> <br>
                <label class="Label" for="">Digite seu email</label>
-               <input class="corpo_input" type="email" placeholder="Digite seu email"> <br>
+               <input id ="email" class="corpo_input" type="email" placeholder="Digite seu email"> <br>
                <label class="Label" for="">Digite sua senha</label>
-               <input class="corpo_input" type="password" placeholder="Digite sua senha"> <br>
+               <input id ="senha"class="corpo_input" type="password" placeholder="Digite sua senha"> <br>
                <label class="Label" for="">confirma sua senha</label>
-               <input class="corpo_input" type="text" placeholder="confirma sua senha"> <br>
+               <input  id ="revisarSenha"class="corpo_input" type="text" placeholder="confirma sua senha"> <br>
 
-               <button class="corpo_button">Criar Conta</button>
+               <div class="erro" style="display: none;" > Erro no cadastro </div>
+               <button id ="buttonCadastro" type="button" class="corpo_button">Criar Conta</button>
           </form>
           <div class="lista_form2"> Já tem uma conta? <a href="login.html" class="form_link"> Entra no Spotify</a></div>
      </section>
@@ -65,5 +67,6 @@
      </div>
      <P class="text_end">Este site é protegido pelo reCAPTCHA e está sujeito à Política de Privacidade e aos Termos de Serviço do Google.</P>
 </div>
+<script src="cadastro.js"></script>
 </body>
 </html>
