--- a/Login-Cadastro/login.html
+++ b/Login-Cadastro/login.html
@@ -51,17 +51,19 @@
 
           <form class="form">
                <label class="Label" for="">E-mail ou nome de usuário</label>
-               <input class="corpo_input" type="email" placeholder="Digite seu email"> <br>
+               <input  id="email"class="corpo_input" type="email" placeholder="Digite seu email"> <br>
                <label  class="Label" for="">Senha</label><br>
-               <input class="corpo_input" type="password" placeholder="Digite sua senha">
+               <input id="senha" class="corpo_input" type="password" placeholder="Digite sua senha">
                <br>
                <div class="checbox" ><input  type="checkbox"> Lembrar de Mim</div>
-               <button  class="corpo_button">Entrar</button>
+               <div class="erro" style="display: none;"> Erro no cadastro </div>
+               <button type="button" class="corpo_button">Entrar</button>
                <br>
                <br>
                <br>
                <a href="#" class="form_link"> Esqueceu sua senha? </a>
           </form>
+
         <div class="lista_form2"> Não Tem uma conta? <a href="cadastro.html" class="form_link">Inscrever-se no Spotify</a></div>
      </div>
      </section>
@@ -69,5 +71,6 @@
      <P class="text_end">Este site é protegido pelo reCAPTCHA e está sujeito à Política de Privacidade e aos Termos de Serviço do Google.</P>
 
 </div>
+<script src="login.js"></script>
 </body>
 </html>
