--- a/Pagina_musica/music.html
+++ b/Pagina_musica/music.html
@@ -27,7 +27,7 @@
                               viewBox="0 0 16 16">
                               <path
                                    d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.669 11.538a.5.5 0 0 1-.686.165c-1.879-1.147-4.243-1.407-7.028-.77a.499.499 0 0 1-.222-.973c3.048-.696 5.662-.397 7.77.892a.5.5 0 0 1 .166.686m.979-2.178a.624.624 0 0 1-.858.205c-2.15-1.321-5.428-1.704-7.972-.932a.625.625 0 0 1-.362-1.194c2.905-.881 6.517-.454 8.986 1.063a.624.624 0 0 1 .206.858m.084-2.268C10.154 5.56 5.9 5.419 3.438 6.166a.748.748 0 1 1-.434-1.432c2.825-.857 7.523-.692 10.492 1.07a.747.747 0 1 1-.764 1.288" />
-                         </svg> <a href="/index.html" class="nome_logo_menu">Spotify</a>     <button  type="submit" class="activ_menu2" > 
+                         </svg> <a href="/inicio/index.html" class="nome_logo_menu">Spotify</a>     <button  type="submit" class="activ_menu2" > 
                               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                                  </svg> MENU
@@ -36,7 +36,7 @@
                     <div class="corpo_total">
                          <div class="corpo_part1">
                               <div corpo_bunton> 
-                                <a href="/index.html">  <button src="/index.html" href="/index.html" type="submit" class="corpo_bunton">
+                                <a href="/inicio/index.html">  <button src="/index.html" href="/index.html" type="submit" class="corpo_bunton">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                         fill="currentColor" class="bi_bi-house-door" viewBox="0 0 16 16">
                                         <path
@@ -307,7 +307,7 @@
                                                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
                                              </svg></button></div>
                               </form>
-                              <a class="link_navb" href="/index.html">INICIO</a>
+                              <a class="link_navb" href="/inicio/index.html">INICIO</a>
                               <a class="link_navb" href="/Login-Cadastro/login.html">LOGIN</a>
                               <a class="link_navb" href="/Login-Cadastro/cadastro.html">CADASTRO</a>                       
                          </div>
