--- a/inicio/index.html
+++ b/inicio/index.html
@@ -20,7 +20,7 @@
            <div class="link_nav">
                <a class="link_navb" href="/inicio/index.html">Inicio</a>
                <a class="link_navb" href="/Pacotes/pacotes.html" > Premium </a>
-               <a class="link_navb" href="/Baixar_APP/APP.html" > Baixar APP</a>
+               <a class="link_navb" href="/inicio/APP.html" > Baixar APP</a>
        <!--    <a class="link_navb" id="link_navb1" href="Pagina_musica/music.html"><div>Entra Sem <br>Cadastro</div></a> -->    
                <a class="link_navb1"> | </a>
                <a class="link_navb" id="login" href="/Login-Cadastro/login.html">Login</a>
