--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="shortcut icon" href="8545516_spotify_logo_socialmedia_user interface_icon.png">
      <title>Spotify-Web-recepção</title>
-     <link rel="stylesheet" href="Inicio.css">
+     <link rel="stylesheet" href="/inicio/Inicio.css">
      
 </head>
 
@@ -20,7 +20,7 @@
            <div class="link_nav">
                <a class="link_navb" href="/inicio/index.html">Inicio</a>
                <a class="link_navb" href="/Pacotes/pacotes.html" > Premium </a>
-               <a class="link_navb" href="/inicio/APP.html" > Baixar APP</a>
+               <a class="link_navb" href="APP.html" > Baixar APP</a>
        <!--    <a class="link_navb" id="link_navb1" href="Pagina_musica/music.html"><div>Entra Sem <br>Cadastro</div></a> -->    
                <a class="link_navb1"> | </a>
                <a class="link_navb" id="login" href="/Login-Cadastro/login.html">Login</a>
