--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="shortcut icon" href="8545516_spotify_logo_socialmedia_user interface_icon.png">
      <title>Spotify-Web-recepção</title>
-     <link rel="stylesheet" href="/inicio/Inicio.css">
+     <link rel="stylesheet" href="inicio/Inicio.css">
      
 </head>
 
