--- a/APP.html
+++ b/APP.html
@@ -25,15 +25,15 @@
      <div class="Corpos_buttons">
           <h1 class="title"> PC </h1>
           <div class="Corpos_buttons1">
-          <button id="wind" class="buttons"> <img class="imgs" src="img/pngwing.com.png" > </button>
-          <button id="lin" class="buttons"> <img class="imgs"src="img/pngwing linux.com (1).png" > </button>
-           <button id="Mac" class="buttons"> <img class="imgs"src="img/pngwing.comPCMAC (1).png" ></button>
+          <button id="wind" class="buttons"> <img class="imgs" src="Baixar_APP/img/pngwing.com.png" > </button>
+          <button id="lin" class="buttons"> <img class="imgs"src="Baixar_APP/img/pngwing linux.com (1).png" > </button>
+           <button id="Mac" class="buttons"> <img class="imgs"src="Baixar_APP/img/pngwing.comPCMAC (1).png" ></button>
           </div> </div>
           <h1 class="title"> Mobile </h1>
           <div class="Corpos_buttons2">
-           <button id="andr" class="buttons"> <img class="imgs"src="img/pngwing.com android(3).png" > </button>
-          <button id="iOS"class="buttons"> <img class="imgs"src="img/pngwing.com (2)CelularIOS.png" ></button>
+           <button id="andr" class="buttons"> <img class="imgs"src="Baixar_APP/img/pngwing.com android(3).png" > </button>
+          <button id="iOS"class="buttons"> <img class="imgs"src="Baixar_APP/img/pngwing.com (2)CelularIOS.png" ></button>
      </div>
-     <script src='App.js'></script>
+     <script src='Baixar_APP/App.js'></script>
  </body>
  </html>
