--- a/music.html
+++ b/music.html
@@ -21,7 +21,7 @@
 
      <section class="corpo">
           <div class="contain">
-               <div class="menu">
+               <div class="menu" >
                     <div clas="logo_name">
                          <svg class="logo_spotify" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                               viewBox="0 0 16 16">
@@ -30,7 +30,7 @@
                          </svg> <a href="index.html" class="nome_logo_menu">Spotify</a>     <button  type="submit" class="activ_menu2" > 
                               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
-                                 </svg> MENU
+                                 </svg> FECHAR MENU
                          </button>
                     </div>
                     <div class="corpo_total">
@@ -288,7 +288,7 @@
                               <button  type="submit"  class="activ_menu"> 
                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
-                                      </svg> MENU
+                                      </svg> ABRIR MENU
                               </button>
                               <Button type="submit" class="button_preto_branco">
                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
